[workspace]
members = ["maokai-mailbox", "maokai-runner", "maokai-task", "maokai-tree"]
resolver = "3"

[workspace.dependencies]
maokai-tree = { path = "maokai-tree" }
maokai-runner = { path = "maokai-runner" }
maokai-task = { path = "maokai-task" }
maokai-mailbox = { path = "maokai-mailbox" }
async-trait = { version = "*", default-features = false }
indextree = { version = "*", default-features = false }
tokio = { version = "*", default-features = false }

[workspace.lints.clippy]
unwrap_used = "deny"
