[workspace]
members = ["maokai-machine", "maokai-runner", "maokai-reconciler", "maokai-tree", "maokai-gears"]
resolver = "3"

[workspace.dependencies]
maokai-tree = { path = "maokai-tree" }
maokai-runner = { path = "maokai-runner" }
maokai-reconciler = { path = "maokai-reconciler" }
maokai-machine = { path = "maokai-machine" }
maokai-gears = { path = "maokai-gears" }

async-trait = { version = "*", default-features = false }
indextree = { version = "*", default-features = false }
tokio = { version = "*", default-features = false }
downcast = { version = "*" }

[workspace.lints.clippy]
unwrap_used = "deny"
