[package]
name = "maokai-machine"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-mt-task"]
tokio-local-task = ["dep:tokio", "tokio/rt", "tokio/macros", "tokio/time", "maokai-gears/tokio-local-task"]
tokio-mt-task = ["dep:tokio", "tokio/rt-multi-thread", "tokio/sync", "tokio/macros", "tokio/time", "maokai-gears/tokio-mt-task"]

[dependencies]
maokai-tree = { workspace = true }
maokai-runner = { workspace = true }
maokai-reconciler = { workspace = true }
maokai-gears = { workspace = true }
downcast = { workspace = true }
tokio = { workspace = true, optional = true }

[lints]
workspace = true
